--- a/app/src/main/res/layout/fragment_shtraf.xml
+++ b/app/src/main/res/layout/fragment_shtraf.xml
@@ -23,7 +23,7 @@
             android:layout_marginRight="20sp"
             android:ems="10"
             android:fontFamily="@font/open_sans"
-            android:hint="ГОСУДАРСТВЕННЫЙ НОМЕР"
+            android:hint="@string/gos"
             android:inputType="textPersonName"
 
             android:minHeight="48dp"
@@ -39,7 +39,7 @@
             android:layout_marginBottom="50dp"
             android:ems="10"
             android:fontFamily="@font/open_sans"
-            android:hint="СТС"
+            android:hint="@string/sts"
             android:inputType="textPersonName"
             android:minHeight="48dp" />
 
@@ -51,7 +51,7 @@
             android:layout_marginRight="20sp"
             android:background="@drawable/btn_theme"
             android:fontFamily="@font/open_sans"
-            android:text="ПРОВЕРИТЬ НАЛИЧИЕ ШТРАФА"
+            android:text="@string/prov"
 
             android:textAlignment="center"
             android:textSize="14sp"
